--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             line-height: 1.6;
         }
 
-        @media (min-width: 576px) {
+        @media (max-width: 576px) {
 
             .message {
                 max-width: 90% !important;
