--- a/index.html
+++ b/index.html
@@ -79,7 +79,19 @@
             line-height: 1.6;
         }
 
-        @media (max-width: 576px) {
+        @media (min-width: 576px) {
+
+            .message {
+                max-width: 90% !important;
+            }
+
+            .message-container {
+                max-width: 100%;
+                padding: 20px;
+            }
+        }
+
+        @media (max-width: 768px) {
 
             .message {
                 max-width: 90% !important;
