--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <p>Congratulations once again, and may your future be bright!</p>
             <br>
             <p class="highlighted">Jethro T. Jorolan</p>
-            <p style="margin-bottom: 48px;">P.S. Goodluck my happily ever after!
+            <p style="margin-bottom: 48px;">P.S. So Nabigay ko na yung pic ko alam ko pangit ako dyan, just letting you know grumaduate yan dahil sayo 😅🤣. Kung ano man yung picture na ibibigay mo i will keep it, treasure it. Goodluck my happily ever after!
             </p>
 
             <p>
