--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             text-align: center;
+            margin-bottom: 48px;
         }
 
         h1 {
@@ -79,9 +80,27 @@
             line-height: 1.6;
         }
 
+        .cta-btn {
+            font-family: 'Playfair Display', serif;
+            /* Use "Montserrat" if you prefer that font */
+
+            animation: fade-in 2s ease-out;
+            width: 600px;
+            margin: 0 auto;
+            background-color: #111;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            color: white;
+            text-align: center;
+            margin-bottom: 14px;
+        }
+
+
         @media (min-width: 576px) {
 
-            .message {
+            .message,
+            .cta-btn {
                 max-width: 90% !important;
             }
 
@@ -93,7 +112,8 @@
 
         @media (max-width: 768px) {
 
-            .message {
+            .message,
+            .cta-btn {
                 max-width: 90% !important;
             }
 
@@ -111,6 +131,87 @@
         <div class="message">
             <h1>Error!</h1>
         </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Oreo's Dump
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                My Shenanigans
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Intertwined Souls
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Surprise kayo no!! Di man ako invited nyan
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Bigkis 💖
+            </a>
+
+        </div>
+
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Sparks! Something Beautiful to Ignite
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Hard, But Her Happiness Matters the Most
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Inspired by Her Making Success Seem Effortless
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Balik Alindog Program 💪
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Sino yun??!
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                What Makes Her Special?
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Practice Demystifying
+            </a>
+
+        </div>
+
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Why Her?
+            </a>
+
+        </div>
+
     </div>
 </body>
 
