--- a/index.html
+++ b/index.html
@@ -129,7 +129,102 @@
     <div class="background"></div>
     <div class="message-container">
         <div class="message">
-            <h1>Error!</h1>
+            <h1>This is not a message ha? Tips hahaha</h1>
+            <br>
+            <p>Dear Cyrene Ann L. Vitug,</p>
+            <br>
+            <p>As you embark on this new chapter of your life, I wanted to share mga tips with you.</p>
+            <p>
+                First and foremost, take some well-deserved rest. You've put in countless hours of studying and
+                preparation para sa gusto mong passion ito yung ano sweat, blood, and tears during college days, so
+                allow
+                yourself to relax and recharge. Take the time to reflect on your accomplishments and celebrate this
+                milestone, look back or ivisit yung mga challenges na naovercome mo.
+            </p>
+            <p>
+                Once you feel na rejuvenated kana, start preparing for your job hunt. Set clear goals, update your
+                resume and
+                LinkedIn profile,
+                and (ito yung pinakamahirap) gather any necessary documents or certifications. Remember to network and
+                seek guidance from
+                professionals in your
+                field as they can provide valuable insights and connections.
+            </p>
+            <p>
+                I can't wait to hear yung mga stories na ikwento mo once you begin your professional journey. Please
+                embrace
+                the challenges,
+                the embarrassing moments, and the epic triumphs/moments 🤣😁😂. Each experience will shape you and
+                contribute to your
+                personal and
+                professional growth. Please maging confident ka magiging sayang yung ganda mo pag di mo ginamit. Amd I
+                hope makahanap ka ng company na pwede ka magdress mas bagay sayo nakadress di naka pants :3
+            </p>
+            <p>As you embark on this exciting new phase, I want to wish you the best of luck. May your path be filled
+                with remarkable
+                achievements and fulfilling opportunities, antayin ko yung linkedin mo ah dapat iupdate mo yun kung saan
+                ka nagwowork. Remember, I'm here cheering you on every step of the way.
+            </p>
+            <br>
+            <p>Congratulations once again, and may your future be bright!</p>
+            <br>
+            <p class="highlighted">Jethro T. Jorolan</p>
+            <p style="margin-bottom: 48px;">P.S. So Nabigay ko na yung pic ko alam ko pangit ako dyan, just letting you
+                know
+                grumaduate yan dahil sayo (inspired 😅🤣). Kung ano man yung picture na ibibigay mo i will keep it,
+                treasure it,
+                i-wait ko yung grad picture ah 😁. Goodluck my happily ever after!
+            </p>
+
+            <p>
+                Mga tips for Post-Graduation Rest and Job Preparation by Jeth :3:
+            </p>
+            <ol>
+                <li><b>Take some well-deserved rest:</b> After completing your graduation, Syempre! it's
+                    important to recharge and
+                    rejuvenate (basta makapagrelax ka, kasi ito yung pinakamahirap na part eh). Take some time to relax,
+                    reflect, and replenish your energy bago ka mag job
+                    hunting process.(wag mo ako gayahin, work agad after grad)</li>
+                <li><b>Set goals and create a plan:</b> Use this time to define your career goals and outline a
+                    strategic plan (kahit di man ganun ka complicated, simple lang si Lord na bahala 👆😉) para sa job
+                    hunt mo.
+                    Identify the industries or kung may fave ka na company na interested pasukan and research the
+                    requirements
+                    and qualifications
+                    they seek in candidates. (mostly english speaking and writing, lalo na yung sa emails and yung mga
+                    meetings 🙄)</li>
+                <li><b>Update mo yun resume and LinkedIn profile mo:</b> Please i-polish mo yung resume and ensure naka
+                    reflect
+                    yung educational
+                    achievements,
+                    internships, projects, and any relevant experiences mo. Don't forget to update your LinkedIn profile
+                    as
+                    well, as it's a
+                    valuable platform for networking and job opportunities. kung meron kang kalibrr, jobstreet, and mga
+                    ibang platform</li>
+                <li><b>Gather necessary documents and certifications:</b> I-ready mo yung mga documents (ito medjo iiyak
+                    ka for sure 😅), certifications, or
+                    licenses...
+                </li>
+                <li><b>Network and seek guidance:</b> Reach out to professionals in your field of interest (lalo na yung
+                    mga fave mong prof. dapat piliin mo yung friendly)
+                    Tapos attend ka ng mga events mostly webinars or mga groups para ma-expand mo yung network and gain
+                    insights.</li>
+                <li><b>Practice interview skills:</b> Ito magprepare ka sa job interviews siguro yung the best yung
+                    researching common interview
+                    questions and
+                    practicing your
+                    responses (ito yung haharap ka sa salamin and yung mga words na nabubulol ka practicing mo lang, wag
+                    ka kabahan, I believe sayo). Just enhance your communication and presentation skills to make a
+                    strong impression during
+                    interviews. </li>
+                <li>
+                    Ito yung last magsubmit ka lang ng magsubmit ng cv/resume mo, kung nareject ka man, okay lang, may
+                    mga iba
+                    pa naman eh. Please remember, even when life seems uncertain or challenging, God has a perfect plan
+                    for you 😉.
+                </li>
+            </ol>
         </div>
         <div class="cta-btn">
             <a href="#" style="color: white; text-decoration: none;">
