--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </a>
 
         </div>
-        <div class="cta-btn">
+        <!-- <div class="cta-btn">
             <a href="#" style="color: white; text-decoration: none;">
                 My Shenanigans
             </a>
@@ -305,7 +305,7 @@
                 Why Her?
             </a>
 
-        </div>
+        </div> -->
 
     </div>
 </body>
