--- a/index.html
+++ b/index.html
@@ -227,17 +227,22 @@
             </ol>
         </div>
         <div class="cta-btn">
+            <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;">
             <a href="#" style="color: white; text-decoration: none;">
+
                 Oreo's Dump
             </a>
 
         </div>
-        <!-- <div class="cta-btn">
+        <div class="cta-btn">
+            <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;">
             <a href="#" style="color: white; text-decoration: none;">
                 My Shenanigans
             </a>
 
         </div>
+
+        <!--
         <div class="cta-btn">
             <a href="#" style="color: white; text-decoration: none;">
                 Intertwined Souls
