--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
                 </li>
             </ol>
         </div>
-        <!--
+
         <div class="cta-btn">
-            <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;">
+            <!-- <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;"> -->
             <a href="#" style="color: white; text-decoration: none;">
 
                 Oreo's Dump
@@ -236,14 +236,19 @@
 
         </div>
         <div class="cta-btn">
-            <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;">
+            <!-- <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;"> -->
             <a href="#" style="color: white; text-decoration: none;">
                 My Shenanigans
             </a>
 
         </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                My Sacred Covenant
+            </a>
 
-    
+        </div>
+
         <div class="cta-btn">
             <a href="#" style="color: white; text-decoration: none;">
                 Intertwined Souls
@@ -311,7 +316,7 @@
                 Why Her?
             </a>
 
-        </div> -->
+        </div>
 
     </div>
 </body>
