--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
             </a>
 
         </div>
-        <div class="cta-btn">
-            <!-- <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;"> -->
+        <!-- <div class="cta-btn">
+             <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;"> 
             <a href="#" style="color: white; text-decoration: none;">
                 My Shenanigans
             </a>
@@ -316,7 +316,7 @@
                 Why Her?
             </a>
 
-        </div>
+        </div> -->
 
     </div>
 </body>
