--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('sunflower-bg.jpg');
+            /* background-image: url('sunflower-bg.jpg'); */
             background-size: cover;
             background-position: center;
         }
@@ -129,6 +129,11 @@
     <div class="background"></div>
     <div class="message-container">
         <div class="message">
+            <h1>Oops! I apologize for the inconvenience</h1>
+            <p>It seems that there was a problem loading the content of this landing page. Rest assured, Jeth is working
+                diligently to fix it with love.</p>
+        </div>
+        <!-- <div class="message">
             <h1>This is not a message ha? Tips hahaha</h1>
             <br>
             <p>Dear Cyrene Ann L. Vitug,</p>
@@ -225,7 +230,7 @@
                     for you 😉.
                 </li>
             </ol>
-        </div>
+        </div> -->
 
         <div class="cta-btn">
             <!-- <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;"> -->
