--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 <body>
     <div class="background"></div>
     <div class="message-container">
-        <div class="message">
+        <!-- <div class="message">
             <h1>Oops! I apologize for the inconvenience</h1>
             <p>It seems that there was a problem loading the content of this landing page. Rest assured, Jeth is working
                 diligently to fix it with love.</p>
-        </div>
-        <!-- <div class="message">
+        </div> -->
+        <div class="message">
             <h1>This is not a message ha? Tips hahaha</h1>
             <br>
             <p>Dear Cyrene Ann L. Vitug,</p>
@@ -230,7 +230,7 @@
                     for you 😉.
                 </li>
             </ol>
-        </div> -->
+        </div>
 
         <div class="cta-btn">
             <!-- <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;"> -->
@@ -240,10 +240,55 @@
             </a>
 
         </div>
-        <!-- <div class="cta-btn">
-             <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;"> 
+        <div class="cta-btn">
+            <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;">
             <a href="#" style="color: white; text-decoration: none;">
                 My Shenanigans
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                Hello, Future Pa! I hope you can prioritize your health, please, because I want you to be there and
+                witness
+                something important
+                in the future. Sending you prayers and love.
+            </a>
+        </div>
+        <div class="cta-btn">
+            <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;">
+            <a href="#" style="color: white; text-decoration: none;">
+                To myself Jeth, just remember this. Please let her know that you're here, willing to listen and willing
+                to wait for
+                her to heal. You'll respect her space and her
+                feelings.
+            </a>
+
+        </div>
+        <div class="cta-btn">
+            <img src="shenanigans.jpg" alt="" srcset="" style="height: 150px;">
+            <a href="#" style="color: white; text-decoration: none;">
+                Rebuilding Trust and Embracing the Future
+            </a>
+
+        </div>
+
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                HAPPY, SAD, LONELY
+            </a>
+        </div>
+        <div class="cta-btn">
+
+            <a href="#" style="color: white; text-decoration: none;">
+                HEHEZ Hindi Sya Movie Date Eh, Sayang
+            </a>
+
+        </div>
+        <div class="cta-btn">
+
+            <a href="#" style="color: white; text-decoration: none;">
+                Panalo Ka Talaga Pagsasamhan Ka, Iwas Faucet (Gripo)
             </a>
 
         </div>
@@ -321,7 +366,7 @@
                 Why Her?
             </a>
 
-        </div> -->
+        </div>
 
     </div>
 </body>
