--- a/index.html
+++ b/index.html
@@ -249,19 +249,36 @@
         </div>
         <div class="cta-btn">
             <a href="#" style="color: white; text-decoration: none;">
-                Hello, Future Pa! I hope you can prioritize your health, please, because I want you to be there and
-                witness
-                something important
-                in the future. Sending you prayers and love.
+                <p>Jeth Notes: I am currently contemplating the idea of concluding this memoir soon, or I might relocate
+                    it to another
+                    website or social media platform.</p>
+
+            </a>
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                <p>
+                    It feels like she's distancing herself from me, but I'm okay with it. I understand her. completely.
+                </p>
+            </a>
+        </div>
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                <p>
+                    Hello, Future Pa! I hope you can prioritize your health, please, because I want you to be there and
+                    witness
+                    something important
+                    in the future. Sending you prayers and love.</p>
             </a>
         </div>
         <div class="cta-btn">
 
             <a href="#" style="color: white; text-decoration: none;">
-                To myself Jeth, just remember this. Please let her know that you're here, willing to listen and willing
-                to wait for
-                her to heal. You'll respect her space and her
-                feelings.
+                <p> To myself Jeth, just remember this. Please let her know that you're here, willing to listen and
+                    willing
+                    to wait for
+                    her to heal. You'll respect her space and her
+                    feelings.</p>
             </a>
 
         </div>
