--- a/index.html
+++ b/index.html
@@ -231,7 +231,13 @@
                 </li>
             </ol>
         </div>
-
+        <div class="cta-btn">
+            <a href="#" style="color: white; text-decoration: none;">
+                <p>
+                    I hope...
+                </p>
+            </a>
+        </div>
         <div class="cta-btn">
             <!-- <img src="oreos-dump.jpg" alt="" srcset="" style="height: 150px;"> -->
             <a href="#" style="color: white; text-decoration: none;">
