--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             </ol>
         </div>
         <div class="cta-btn">
-            <a href="#" style="color: white; text-decoration: none;">
+            <a href="https://jtj-my-journal.vercel.app/" style="color: white; text-decoration: none;">
                 <p>
                     My Journal
                 </p>
