--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
                 </li>
             </ol>
         </div>
-         <div class="cta-btn">
+        <!-- <div class="cta-btn">
             <a href="https://jtj-my-journal.vercel.app/" style="color: white; text-decoration: none;">
                 <p>
                     My Journal
                 </p>
             </a>
-        </div>
+        </div> -->
 
     </div>
 </body>
